--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -1,6 +1,8 @@
 .header {
     margin-top: 40px;
+    z-index: 23;
     &__blocks {
+        z-index: 123;
         display: flex;
         justify-content: space-between;
     }
@@ -12,6 +14,7 @@
     }
     &__item {
         text-transform: uppercase;
+        z-index: 123213;
     }
     &__block {
         font-weight: 500;
@@ -33,6 +36,7 @@
 }
 
 .numberBlock {
+    z-index: 123123;
     a {
         color: #fff;
         text-decoration: none;
