--- a/sass/blocks/_investing.scss
+++ b/sass/blocks/_investing.scss
@@ -1,9 +1,57 @@
 .investing {
+    color: #fff;
     &__wall {
         margin-top: 140px;
     }
     &__text {
-        max-width: 700px;
+        max-width: 760px;
+    }
+    &__btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-decoration: none;
+        color: #fff;
+        margin-top: 60px;
+        background: #EA142E;
+        box-shadow: 0px 151px 60px rgba(234, 20, 46, 0.03), 0px 85px 51px rgba(234, 20, 46, 0.1), 0px 38px 38px rgba(234, 20, 46, 0.17), 0px 9px 21px rgba(234, 20, 46, 0.2), 0px 0px 0px rgba(234, 20, 46, 0.2);
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 20px;
+        letter-spacing: 0.1em;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        font-family: 'Gilroy' sans-serif;
+        width: 460px;
+        height: 90px;
+        margin-bottom: 200px;
+    }
+    &__item {
+        position: relative;
+        display: flex;
+        align-items: center;
+    }
+    &__block {
+        display: flex;
+        flex-direction: column;
+        margin-top: 41px;
+        gap: 37px;
+    }
+    &__img {
+        top: 40%;
+    }
+    &__descr {
+        width: 560px;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 130%;
+        color: #FFFFFF;
+    }
+    &__title {
+        font-weight: 600;
+        font-size: 60px;
+        line-height: 120%;
+        color: #FFFFFF;
     }
 }
 
@@ -20,4 +68,22 @@
         left: 0;
         z-index: -1;
     }
+}
+.rentBox {
+    position: absolute;
+    width: 50%;
+    height: 1019px;
+    left: 50%;
+    top: 14px;
+    z-index: 1;
+}
+
+.ml34 {
+    margin-left: 34px;
+}
+.ml32 {
+    margin-left: 32px;
+}
+.ml20 {
+    margin-left: 20px;
 }
