--- a/sass/blocks/_profit.scss
+++ b/sass/blocks/_profit.scss
@@ -8,6 +8,7 @@
     }
     &__blocks {
         margin-top: 60px;
+        margin-bottom: 60px;
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -22,6 +23,19 @@
             font-size: 20px;
             line-height: 24px;
             color: #707C88;
+        }
+        &-value {
+            border: 1px solid #CED6DA;
+            width: 100%;
+            height: 50px;
+            display: flex;
+            justify-content: left;
+            align-items: center;
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 25px;
+            letter-spacing: 0.04em;
+            color: #3C4D69;
         }
     }
     &__total {
