--- a/sass/blocks/_profit.scss
+++ b/sass/blocks/_profit.scss
@@ -25,8 +25,6 @@
             color: #707C88;
         }
         &-value {
-            border: 1px solid #CED6DA;
-            width: 100%;
             height: 50px;
             display: flex;
             justify-content: left;
@@ -36,6 +34,19 @@
             line-height: 25px;
             letter-spacing: 0.04em;
             color: #3C4D69;
+            div {
+                padding: 10px 17px;
+                border: 1px solid #CED6DA;
+            }
+        }
+        &-snake {
+            width: 265px;
+            &-line {
+                margin-top: 55px;
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+            }
         }
     }
     &__total {
