why section is progress

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -18,6 +18,5 @@
 @import 'blocks/profit';
 @import 'blocks/question';
 @import 'blocks/dynamic';
-
-
-
+@import 'blocks/location';
+@import 'blocks/why';
