--- a/sass/blocks/_why.scss
+++ b/sass/blocks/_why.scss
@@ -27,7 +27,11 @@
         align-items: flex-start;
     }
     &__descr {
-        margin-left: 30px;
+        margin-left: 50px;
+    }
+    &__descrReverse {
+        text-align: right;
+        margin-right: 50px;
     }
     &__icon {
         position: absolute;
@@ -36,5 +40,23 @@
         transform: translateY(-50%);
         max-width: 40px;
         max-height: 33px;
+    }
+    &__iconReverse {
+        position: absolute;
+        right: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        max-width: 40px;
+        max-height: 33px;
+    }
+    &__link {
+        position: absolute;
+        right: 0;
+        top: 0;
+        z-index: 2;
+        img {
+            width: 14px;
+            height: 14px;
+        }
     }
 }
