--- a/sass/blocks/_why.scss
+++ b/sass/blocks/_why.scss
@@ -1,15 +1,22 @@
 .why {
     &__mobile {
+        position: relative;
         height: 815px;
+        margin-top: 90px;
+        background-color: #F6F6F6;
     }
     &__bigMobile {
         position: absolute;
-        display: none;
+        top: 80px;
+        left: 50%;
+        transform: translateX(-40%);
+        width: 515px;
     }
     &__blocks {
         display: flex;
         justify-content: space-between;
         height: 100%;
+        margin: 0 100px;
     }
     &__item {
         position: relative;
@@ -28,6 +35,10 @@
     }
     &__descr {
         margin-left: 50px;
+        font-weight: 500;
+        font-size: 22px;
+        line-height: 130%;
+        color: #3C4D69;
     }
     &__descrReverse {
         text-align: right;
@@ -51,12 +62,19 @@
     }
     &__link {
         position: absolute;
-        right: 0;
-        top: 0;
+        right: 40px;
+        top: -50%;
         z-index: 2;
         img {
-            width: 14px;
-            height: 14px;
+            width: 15px;
+            height: 15px;
         }
+    }
+    &__title {
+        font-weight: 600;
+        font-size: 70px;
+        line-height: 120%;
+        color: #3C4D69;
+        margin-top: 190px;
     }
 }
