--- a/sass/blocks/_investing.scss
+++ b/sass/blocks/_investing.scss
@@ -6,26 +6,26 @@
     &__text {
         max-width: 770px;
     }
-    &__btn {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-decoration: none;
-        color: #fff;
-        margin-top: 60px;
-        background: #EA142E;
-        box-shadow: 0px 151px 60px rgba(234, 20, 46, 0.03), 0px 85px 51px rgba(234, 20, 46, 0.1), 0px 38px 38px rgba(234, 20, 46, 0.17), 0px 9px 21px rgba(234, 20, 46, 0.2), 0px 0px 0px rgba(234, 20, 46, 0.2);
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 20px;
-        letter-spacing: 0.1em;
-        text-transform: uppercase;
-        color: #FFFFFF;
-        font-family: 'Gilroy' sans-serif;
-        width: 460px;
-        height: 90px;
-        margin-bottom: 200px;
-    }
+    // &__btn {
+    //     display: flex;
+    //     justify-content: center;
+    //     align-items: center;
+    //     text-decoration: none;
+    //     color: #fff;
+    //     margin-top: 60px;
+    //     background: #EA142E;
+    //     box-shadow: 0px 151px 60px rgba(234, 20, 46, 0.03), 0px 85px 51px rgba(234, 20, 46, 0.1), 0px 38px 38px rgba(234, 20, 46, 0.17), 0px 9px 21px rgba(234, 20, 46, 0.2), 0px 0px 0px rgba(234, 20, 46, 0.2);
+    //     font-weight: 700;
+    //     font-size: 16px;
+    //     line-height: 20px;
+    //     letter-spacing: 0.1em;
+    //     text-transform: uppercase;
+    //     color: #FFFFFF;
+    //     font-family: 'Gilroy' sans-serif;
+    //     width: 460px;
+    //     height: 90px;
+    //     margin-bottom: 200px;
+    // }
     &__item {
         position: relative;
         display: flex;
@@ -55,14 +55,10 @@
     }
 }
 
-
-
-
-
 .background {
     img {
         position: absolute;
-        width: 100vw;
+        width: 100%;
         height: 970px;
         top: 0;
         left: 0;
