propertySection is done

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -43,3 +43,6 @@
 @import 'blocks/boxRent';
 @import 'blocks/howwework';
 @import 'blocks/calculation';
+@import 'blocks/property';
+@import 'blocks/pension';
+@import 'blocks/sphere';
