--- a/sass/blocks/_howwework.scss
+++ b/sass/blocks/_howwework.scss
@@ -24,7 +24,6 @@
         border: 1px solid #EBEFF0;
         padding: 40px 40px 40px;
         &_title {
-            font-family: 'Gilroy';
             margin-top: 35px;
             font-weight: 600;
             font-size: 24px;
@@ -51,6 +50,7 @@
     }
     &__link {
         display: block;
+        width: 95%;
         margin-top: 30px;
         font-weight: 600;
         font-size: 16px;
@@ -59,8 +59,7 @@
         text-transform: uppercase;
         color: #EA142E;
         text-decoration: none;
-        border-bottom: 1px solid rgba(243, 34, 48, 0.4);
-        width: 218px;        
+        border-bottom: 1px solid rgba(243, 34, 48, 0.4);    
     }
     &__waterMark {
         position: absolute;
