intelligenceSection is done

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -46,3 +46,5 @@
 @import 'blocks/property';
 @import 'blocks/pension';
 @import 'blocks/sphere';
+@import 'blocks/stability';
+@import 'blocks/intelligence';
