classicSection, growthSection is done; selfSection is progress.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -49,3 +49,5 @@
 @import 'blocks/stability';
 @import 'blocks/intelligence';
 @import 'blocks/classic';
+@import 'blocks/growth';
+@import 'blocks/self';
