--- a/sass/blocks/_classic.scss
+++ b/sass/blocks/_classic.scss
@@ -18,17 +18,76 @@
         font-weight: 600;
         font-size: 24px;
     }
+    &__tag2 {
+        margin-top: 80px;
+    }
     &__table {
         display: grid;
         grid-template-columns: 280px auto auto;
         gap: 40px;
     }
+    &__title {
+        border-bottom: 1px solid #E3E3E3;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 130%;
+        color: #3C4D69;
+        &_p40 {
+            padding: 40px;
+            color: #EA142E;
+        }
+    }
+    &__title2 {
+        border-bottom: 1px solid #E3E3E3;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    &__item {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 40px;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 130%;
+        color: #3C4D69;    
+        &_title {
+            font-weight: 700;
+            font-size: 18px;
+            line-height: 130%;
+            color: #3C4D69;
+        }
+        &_subtitle {
+            margin-top: 10px;      
+        }
+        &_bold {
+            font-weight: bold;
+        }
+        &_noPadding {
+            padding: 0;
+            padding-top: 40px;
+        }
+        span {
+            font-weight: bold;
+            color: #EA142E;
+        }
+    }
     &__img {
         width: 100%;
+        height: 100%;
     }
     &__block {
         display: grid;
         grid-template-rows: 117px 120px 176px 200px 200px 250px;
-
     }
+    &__block2 {
+        grid-template-rows: 50px 121px 121px;
+    }
+}
+.f6 {
+    background: #F6F6F6;
 }
