--- a/sass/blocks/_self.scss
+++ b/sass/blocks/_self.scss
@@ -14,6 +14,9 @@
             margin-top: 45px;
         }
     }
+    &__title2 {
+        margin-top: 80px;
+    }
     &__subtitle {
         position: relative;
         font-weight: 500;
@@ -84,5 +87,128 @@
         display: grid;
         row-gap: 10px;
     }
-    
+    &__wall {
+        margin-top: 35px;
+        display: grid;
+        grid-template-columns: 110px auto;
+        column-gap: 60px;
+    }
+    &__items {
+        display: grid;
+        row-gap: 30px;
+        padding-left: 25px;
+    }
+    &__item {
+        position: relative;
+        justify-content: center;
+        align-items: center;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 130%;
+        letter-spacing: 0.05em;
+        color: #3C4D69;
+        &::before {
+            content: '';
+            position: absolute;
+            left: -25px;
+            top: 45%;
+            transform: translateY(-50%);
+            width: 12px;
+            height: 12px;
+            background-color: #000;
+        }
+        &_noBefore {
+            &::before {
+                display: none;
+            }
+        }
+        &_1 {
+            &::before {
+                background-color: #F6F6F6;
+            }
+        }
+        &_2 {
+            &::before {
+                background-color: #8E669B;
+            }
+        }
+        &_3 {
+            &::before {
+                background-color: #9CA6B5;
+            }
+        }
+        &_4 {
+            &::before {
+                background-color: #616C7C;
+            }
+        }
+        &_5 {
+            &::before {
+                background-color: #E2DBD3;
+            }
+        }
+        &_6 {
+            &::before {
+                background-color: #8DACD8;
+            }
+        }
+    }
+    &__cards {
+        display: grid;
+        grid-template-columns: 50px 300px 330px 350px 180px 50px;
+    }
+    &__card {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: 600;
+        font-size: 16px;
+        line-height: 20px;
+        letter-spacing: 0.05em;
+        color: #FFFFFF;
+        &_1 {
+            background-color: #F6F6F6;
+            color: #3C4D69;
+        }
+        &_2 {
+            background-color: #8E669B;
+        }
+        &_3 {
+            background-color: #9CA6B5;
+        }
+        &_4 {
+            background-color: #616C7C;
+        }
+        &_5 {
+            background-color: #E2DBD3;
+            color: #3C4D69;
+        }
+        &_6 {
+            background-color: #8DACD8;
+        }
+    }
+    &__turbo {
+        height: 170px;
+        background: linear-gradient(77.58deg, #212C3F 57.28%, #EA142E 166.86%);
+        margin-top: 200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: 500;
+        font-size: 30px;
+        line-height: 140%;
+        color: #FFFFFF;
+        span {
+            margin-left: 115px;
+        }
+        &_text {
+            position: relative;
+        }
+        &_img {
+            position: absolute;
+            left: 365px;
+        }
+    }
 }
