--- a/sass/blocks/_request.scss
+++ b/sass/blocks/_request.scss
@@ -21,6 +21,7 @@
         font-size: 16px;
         line-height: 140%;
         color: #707C88;
+        resize: none;
     }
     &__inputs {
         display: flex;
